<?xml version="1.0" encoding="utf-8"?>
<!--
    Montreal Just in Case
    Copyright (C) 2011  Mudar Noufal <mn@mudar.ca>

    Geographic locations of public safety services. A Montreal Open Data
    project.

    This file is part of Montreal Just in Case.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="hello">Hello World, Montréal Just in Case!</string>
    <string name="app_name">MTL Just in Case</string>
    <string name="app_version">1.0</string>
    <string name="google_map_api_key" _YOUR_GOOGLE_MAP_API_KEY_></string>
    <string name="google_map_api_key_debug" _YOUR_GOOGLE_MAP_API_KEY_DEBUG_></string>
    <string name="app_label_fire_halls">Fire Stations</string>
    <string name="app_label_spvm_stations">SPVM Stations</string>
    <string name="app_label_water_supplies">Water Supplies</string>
    <string name="app_label_emergency_hostels">Emergency Hostels</string>
    <string name="app_label_about">About</string>
    <string name="app_label_preferences">Settings</string>
    <string name="btn_fire_halls">Fire Stations</string>
    <string name="btn_spvm_stations">SPVM Stations</string>
    <string name="btn_water_supplies">Water\nSupplies</string>
    <string name="btn_emergency_hostels">Emergency\nHostels</string>
    <string name="menu_view_list">List</string>
    <string name="menu_view_map">Map</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_link_kml">Directions</string>
    <string name="menu_map_mylocation">My Location</string>
    <string name="menu_map_find_from_name">Postal Code</string>
    <string name="menu_list_sort_order">Sort by</string>
    <string name="placemarks_empty_list">List is empty…</string>
    <string name="placemark_distance_iso">%.1f km</string>
    <string name="placemark_distance_iso_min">&lt; 100 m</string>
    <string name="placemark_distance_imp">%.1f mi</string>
    <string name="placemark_distance_imp_feet">%s ft</string>
    <string name="placemark_distance_imp_min">&lt; 200 ft</string>
    <string name="logo_open_data">@drawable/logo_open_data_en</string>
    <string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
    <string name="toast_search_error">Location %1$s not found</string>
    <string name="toast_postal_code_processing">Processing…</string>
    <string name="toast_network_connection_error">Network connection is unavailable…</string>
    <string name="toast_sync_finished">Loading completed successfully!</string>
    <string name="eula_assets_filename">gpl-3.0-standalone.html</string>
    <string name="eula_title">GNU General Public License v3.0</string>
    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_title_maps_chooser">Display Map using…</string>
    <string name="dialog_btn_eula_accept">Accept</string>
    <string name="dialog_btn_eula_decline">Decline</string>

    <!-- <string name="dialog_network_connection_message">The application needs a network connection. Please turn on mobile network or Wi-Fi in Settings&#8230;</string> -->

    <string name="dialog_remote_kml_title">Directions with GMaps</string>
    <string name="dialog_remote_kml_summary">This will download the remote KML file and open it with Google Maps app, allowing you to display Directions and Street View (if installed). Continue with download?</string>
    <string name="dialog_postal_code_title">Postal Code</string>
    <string name="dialog_postal_code_summary">Please enter postal code to locate on map:</string>
    <string name="input_hint_postal_code">Postal Code</string>
    <string name="about_contents_note">In case of emergency, please contact the City\'s security services directly. Do not rely on information provided here as it will not contain the updated security measures.</string>
    <string name="about_contents_project_url"><a href="http://www.montrealjustincase.com/">montrealjustincase.com</a></string>
    <string name="about_contents_project_version">Version %s</string>
    <string name="about_contents_intro">Montréal Just in Case provides you with the geographic locations and addresses of four public safety services:</string>
    <string name="about_contents_2_1">Fire stations.</string>
    <string name="about_contents_2_2">Neighbourhood police stations (SPVM).</string>
    <string name="about_contents_2_3">Water supplies available to the population in case of heat wave or other events related to public safety.</string>
    <string name="about_contents_2_4">Emergency accommodation centres and air conditioned public places.</string>
    <string name="about_contents_credits">Android app developed by <a href="http://www.mudar.ca/">Mudar Noufal</a>. Source code is released under the GPLv3 license from the Free Software Foundation.</string>
    <string name="about_contents_open_data">Project done in collaboration with <a href="http://montrealouvert.net/donnees-ouvertes-questions-frequemment-demandees/?lang=en">Montréal ouvert</a>. This app is powered by The City of Montréal Open Data <a href="http://donnees.ville.montreal.qc.ca/">Portal</a>, in compliance with its Open Data <a href="http://donnees.ville.montreal.qc.ca/licence-texte-complet">license</a>.</string>
    <string name="prefs_category_general">General Preferences</string>
    <string name="prefs_category_performance">Performance</string>
    <string name="prefs_language_title">Language</string>
    <string name="prefs_language_summary">Change the interface language</string>
    <string name="prefs_language_dialog_title">Set language</string>
    <string name="prefs_language_french">Français</string>
    <string name="prefs_language_english">English</string>
    <string name="prefs_units_title">Distance Units System</string>
    <string name="prefs_units_summary">Calculate distances using km or mi</string>
    <string name="prefs_units_dialog_title">Set units system</string>
    <string name="prefs_units_iso">Metric (km)</string>
    <string name="prefs_units_imperial">Imperial (mile)</string>
    <string name="prefs_list_sort_title">Sort By</string>
    <string name="prefs_list_sort_summary">Sort lists by name or distance</string>
    <string name="prefs_list_sort_summary_todo">By name or distance. Coming soon…</string>
    <string name="prefs_list_sort_dialog_title">Sort lists by</string>
    <string name="prefs_list_sort_name">Alphabetical order</string>
    <string name="prefs_list_sort_distance">Distance</string>
    <string name="prefs_follow_location_title">Enhanced measurements</string>
    <string name="prefs_follow_location_summary">Experimental: Background location updates. Useful if on the move.</string>

</resources>