<?xml version="1.0" encoding="utf-8"?>

<!--
    Montreal Just in Case
    Copyright (C) 2011  Mudar Noufal <mn@mudar.ca>

    Geographic locations of public safety services. A Montreal Open Data
    project.

    This file is part of Montreal Just in Case.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/MenusTheme" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_normal"
                android:layout_marginTop="@dimen/padding_normal"
                android:gravity="center"
                android:text="@string/app_name"
                 />

            <TextView
                android:id="@+id/about_links_contents_project_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_contents_project_url"
                />

            <TextView
                android:id="@+id/about_links_contents_project_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_contents_project_version"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" >
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_contents_intro" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow >

                    <TextView
                        android:layout_column="1"
                        android:text="– " >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:text="@string/about_contents_2_1" >
                    </TextView>
                </TableRow>

                <TableRow >

                    <TextView
                        android:layout_column="1"
                        android:text="– " >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:text="@string/about_contents_2_2" >
                    </TextView>
                </TableRow>

                <TableRow >

                    <TextView
                        android:layout_column="1"
                        android:text="– " >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:text="@string/about_contents_2_3" >
                    </TextView>
                </TableRow>

                <TableRow >

                    <TextView
                        android:layout_column="1"
                        android:text="– " >
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_column="2"
                        android:text="@string/about_contents_2_4" >
                    </TextView>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" >
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/about_logo_open_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:padding="@dimen/padding_normal"
                    android:src="@drawable/ic_action_search" />

                <TextView
                    android:id="@+id/about_links_contents_credits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/about_logo_open_data"
                    android:linksClickable="true"
                    android:text="@string/about_contents_credits" />

                <TextView
                    android:id="@+id/about_links_contents_open_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/about_links_contents_credits"
                    android:layout_toLeftOf="@+id/about_logo_open_data"
                    android:text="@string/about_contents_open_data" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp" >
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_contents_note"
                 />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>